css/singlePageTemplate.css
@charset "UTF-8";
/* Body */

body {
	font-family: source-sans-pro;
	background-color: #f2f2f2;
	margin-top: 2%;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	font-style: normal;
	font-weight: 200;
}
.navigationIndicator{
	margin-left:1048px;
	position:absolute;
	margin-top:0px;
	width:92px;
}
hr{
	 display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ffffff;
   
    
}
.previewText{
	position:absolute;
	text-align: right;
	width:98%;
	margin-top: 0%;
	color:black;
}
.setBrowserTable{
	position: absolute;
	margin-left: 700px;
	margin-top:-30px;
}
.ItemPreviewName{
	position:absolute;
	text-align: center;
	margin-top: 1%;
	font-size:30px;
	color: darkgoldenrod;
	width:100%;
}
.containedItemDiv{
	position:absolute;
	margin-left: 700px;
	
	margin-top:-340px;
}
.setItemsListDiv{
	position:absolute;
	margin-left: 1000px;
	-moz-margin-top:-440px;
	margin-top:-340px;
}
.Warning{
	position: absolute;
	vertical-align: middle;
	text-align: center;
	display: none;
	color: white;
	background-color: red;
	width: inherit;
	height: 30px;
	margin-left: 0%;
	margin-top: -30px;
}
.ItemBrowser{
	display: none;
	margin-top:40px;
	
}
.ItemSetCreator{	
	display: none;
	min-height:100px;
	position:relative;
	height:inherit;
	display:flex;
	
	
}
.ItemPreviewMainStat{
	font-size:20px;
	color: gray;
	margin-top: 15%;
	margin-left: 80px;
}
.ItemPreviewUniqueSecondary{
		margin-left: 5%;
	color: darkgoldenrod;
}
.ItemPreviewSeondaryStats{
	font-size: 12px;
	margin-left: 5%;
}
.ItemPreviewDescription{
	font-size: 20px;
	margin-left: 1%;
	font-style:italic;
	
}
.ItemPreviewSecondaryStatText{
	text-align: left;
	margin-left: 2%;
	margin-top: 40px;
	font-size: 15px;
}
.ItemPreview{
	
	background-color :white;
	
	border-style: double;
	border-color: dimgray;
	width: 300px;
	height:auto;
	margin-left: 1400px;
	
	
	
}
.MainStatsTable{
	margin-left:400px;
margin-top:200px;
	
}
.damageType{
	margin-left:220px; 
}
.SecondaryStats{
	margin-left: 600px;
	
}
/* Container */
.container {
	width: 1800px;
	margin-left: auto;
	margin-right: auto;
	height: auto;
	background-color: #FFFFFF;
	display:flex;
	
	flex-direction: column;
}


/* Navigation */
header {
	width: 100%;
	height: 50px;
	background-color: #52bad5;
	border-bottom: 1px solid #2C9AB7;
}
.logo {
	color: #fff;
	font-weight: bold;
	text-align: undefined;
	width: 35%;
	overflow: hidden;
	float: left;
	margin-top: 15px;
	margin-left: 25px;
	letter-spacing: 4px;
}
nav {
	float: right;
	width: 50%;
	text-align: right;
	margin-right: 25px;
	
	
}
header nav ul {
	list-style: none;
	float: right;
}
nav ul li {
	float: left;
	color: #FFFFFF;
	font-size: 14px;
	text-align: left;
	margin-right: 25px;
	letter-spacing: 2px;
	font-weight: bold;
	transition: all 0.3s linear;
}
ul li a {
	color: #FFFFFF;
	text-decoration: none;
}
ul li:hover a {
	color: #2C9AB7;
}
.hero_header {
	color: #FFFFFF;
	text-align: center;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	letter-spacing: 4px;
}
.itemquality{
	
	margin-left:50px;
	
}
.ItemCreator{
	
}
.CreateSetButton{
	margin-left:60px;
	width:530px;
	height:40px;
	font-size:20px;
}
.createItemButton{
	margin-left:400px;
	width:430px;
	height:40px;
	font-size:20px;
	
}
.ItemSetCreatorContent{
	position:absolute;
	height:auto;
	
	
}
.ItemCreatorName{
	position: absolute;
	margin-top: 20px; 
	margin-left: -350px;
}
/* Hero Section */
.hero {
	background-color: #B3B3B3;
	padding-top: 150px;
	padding-bottom: 150px;
}
.secondaryStats{
	
}
.SecondaryStats{
	position:absolute;
	margin-top:90px;
}
.light {
	font-weight: bold;
	color: #717070;
}
.tagline {
	text-align: center;
	color: #FFFFFF;
	margin-top: 4px;
	font-weight: lighter;
	text-transform: uppercase;
	letter-spacing: 1px;
}
/* About Section */
.text_column {
	width: 29%;
	text-align: justify;
	font-weight: lighter;
	line-height: 25px;
	float: left;
	padding-left: 20px;
	padding-right: 20px;
	color: #A3A3A3;
}
.about {
	padding-left: 25px;
	padding-right: 25px;
	padding-top: 35px;
	display: inline-block;
	background-color: #FFFFFF;
	margin-top: 0px;
}
/* Stats Gallery */
.stats {
	color: #717070;
	margin-bottom: 5px;
}
.gallery {
	clear: both;
	display: inline-block;
	width: 100%;
	background-color: #FFFFFF;
	/* [disabled]min-width: 400px;
*/
	padding-bottom: 35px;
	padding-top: 0px;
	margin-top: -5px;
	margin-bottom: 0px;
}
.thumbnail {
	width: 25%;
	text-align: center;
	float: left;
	margin-top: 35px;
}
.gallery .thumbnail h4 {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
	color: #52BAD5;
}
.gallery .thumbnail p {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	color: #A3A3A3;
}
/* Parallax Section */
.banner {
	background-color: #2D9AB7;
	background-image: url(../images/parallax.png);
	height: 400px;
	background-attachment: fixed;
	background-size: cover;
	background-repeat: no-repeat;
}
.parallax {
	color: #FFFFFF;
	text-align: right;
	padding-right: 100px;
	padding-top: 110px;
	letter-spacing: 2px;
	margin-top: 0px;
}
.parallax_description {
	color: #FFFFFF;
	text-align: right;
	padding-right: 100px;
	width: 30%;
	float: right;
	font-weight: lighter;
	line-height: 23px;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
}
/* More info */
footer {
	background-color: #FFFFFF;
	padding-bottom: 35px;
}
.footer_column {
	width: 50%;
	text-align: center;
	padding-top: 30px;
	float: left;
}
footer .footer_column h3 {
	color: #B3B3B3;
	text-align: center;
}
footer .footer_column p {
	color: #717070;
	background-color: #FFFFFF;
}
.cards {
	width: 100%;
	height: auto;
	max-width: 400px;
	max-height: 200px;
}
footer .footer_column p {
	padding-left: 30px;
	padding-right: 30px;
	text-align: justify;
	line-height: 25px;
	font-weight: lighter;
	margin-left: 20px;
	margin-right: 20px;
}
.button {
	width: 200px;
	margin-top: 40px;
	margin-right: auto;
	margin-bottom: auto;
	margin-left: auto;
	padding-top: 20px;
	padding-right: 10px;
	padding-bottom: 20px;
	padding-left: 10px;
	text-align: center;
	vertical-align: middle;
	border-radius: 0px;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 2px;
	border: 3px solid #FFFFFF;
	color: #FFFFFF;
	transition: all 0.3s linear;
}
.button:hover {
	background-color: #FEFEFE;
	color: #C4C4C4;
	cursor: pointer;
}
.createItem{
	margin-left: 400px;
	margin-top:20px;
	
}
.setDescription{
	margin-left: 60px;
	width:360px;
	margin-top:50px;
}
.setBonus{
	width:360px;
	margin-left:81px;
}

.setName{
	
	 font-size: 30px;
	margin-left:47px;
	margin-top:22px;
}
.itemBrowserTable{
	position:absolute;
	margin-left:46px;
	margin-top:46px;
}
.copyright {
	
	text-align: center;
	padding-top: 20px;
	
	padding-bottom: 20px;
	background-color: #717070; 
	color: #FFFFFF;
	text-transform: uppercase;
	font-weight: lighter;
	letter-spacing: 2px;
	border-top-width: 2px;
}
.footer_banner {
	background-color: #B3B3B3;
	padding-top: 60px;
	padding-bottom: 60PX;
	margin-bottom: 0px;
	background-image: url(../images/pattern.png);
	background-repeat: repeat;
}
footer {
	display: inline-block;
}
.hidden {
	display: none;
}

/* Mobile */
@media (max-width: 320px) {
.logo {
	width: 100%;
	text-align: center;
	margin-top: 13px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
}
.container header nav {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	float: none;
	display: none;
}
header nav ul {
}
nav ul li {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	text-align: center;
}
.text_column {
	width: 100%;
	text-align: justify;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.thumbnail {
	width: 100%;
}
.footer_column {
	width: 100%;
	margin-top: 0px;
}
.parallax {
	text-align: center;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	padding-top: 40%;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	width: 100%;
	font-size: 18px;
}
.parallax_description {
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	width: 90%;
	margin-top: 25px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 12px;
	float: none;
	text-align: center;
}
.banner {
	background-color: #2D9AB7;
	background-image: none;
}
.tagline {
	margin-top: 20px;
	line-height: 22px;
}
.hero_header {
	padding-left: 10px;
	padding-right: 10px;
	line-height: 22px;
	text-align: center;
}
}

/* Small Tablets */
@media (min-width: 321px)and (max-width: 767px) {
.logo {
	width: 100%;
	text-align: center;
	margin-top: 13px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	color: #043745;
}
.container header nav {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	float: none;
	overflow: auto;
	display: inline-block;
	background: #52bad5;
}
header nav ul {
	padding: 0px;
	float: none;
}
nav ul li {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	text-align: center;
	padding-top: 8px;
	padding-bottom: 8px;
}
.text_column {
	width: 100%;
	text-align: left;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.thumbnail {
	width: 100%;
}
.footer_column {
	width: 100%;
	margin-top: 0px;
}
.parallax {
	text-align: center;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	padding-top: 40%;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	width: 100%;
	font-size: 18px;
}
.parallax_description {
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	margin-top: 30%;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	float: none;
	width: 100%;
	text-align: center;
}
.thumbnail {
	width: 50%;
}
.parallax {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-top: 20%;
}
.parallax_description {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	padding-top: 30px;
}
.banner {
	padding-left: 20px;
	padding-right: 20px;
}
.footer_column {
	width: 100%;
}
}

/* Small Desktops */
@media (min-width: 768px) and (max-width: 1096px) {
.text_column {
	width: 100%;
}
.thumbnail {
	width: 50%;
}
.text_column {
	width: 100%;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.banner {
	margin-top: 0px;
	padding-top: 0px;
}
}
.dfd {
}
.itemname{
	margin-left: 400px;
	 font-size: 30px;
}
.itemName{
	font-size:30px;
}
.descriptionArea{
	margin-left:400px;
}
.unidqueSecondayrArea{
	margin-top:20px;
}
.minimumLevelLabel{
	margin-left:50px;
}
.minimumLevelInput{
	margin-left:160px;
}
.durability{
	margin-left:196px;
}
.randomCount{
	margin-left:160px; 
}
.textarea {
	margin-left:13px;
	width:300px;
}
.uniqueSecondary{
	width:300px;
}
.textarealabel{
	
}
.itemtypequality{
	position:absolute;
	margin-top:100px;
	margin-left:3px;
}
.itemTypeSelect{
	position:absolute;
	margin-left:221px;
}
.itemtype {
	margin-left:50px;
	
}
.aligner{
	min-height:400px;
}
.itemQualitySelect {
	margin-left:252px;
}
.ItemPreviewUniqueSecondary {
}
.ItemPreviewDescription {
}

